--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Git Test</title>
     <link rel="stylesheet" href="">
 </head>
 <body>
 
-    <p>Hello world!</p>
+    <h1>Hello world!</h1>
 
     <!-- <script>
         alert(1);
