--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
 <body>
 
     <h1>Hello world!</h1>
-
-    <!-- <script>
-        alert(1);
-    </script> -->
-    <script src="js/script.js"></script>
+    <h2>Hello!</h2>
 </body>
 </html>
