--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
 
     <h1>Hello world!</h1>
-    <h2>Hello!</h2>
-    <h3>sdfsdfsdfsd</h3>
+
+    <!-- <script>
+        alert(1);
+    </script> -->
+    <script src="script.js"></script>
 </body>
 </html>
